--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,9 +17,14 @@ a {
   text-decoration: none;
 }
 
+#wrapper{
+  width:100%;
+  overflow:hidden;
+}
+
 .header{
   height:30px;
-  width:100%;
+  width:1540px;
   background-color:rgba(34,49,52,0.8);
   position:fixed;
   z-index: 10;
