--- a/stylesheet.css
+++ b/stylesheet.css
@@ -71,7 +71,8 @@ a {
 
 .contents{
   background-color:#f7f7f7;
-  height:1400px;
+  height:auto;
+  overflow:hidden;
 }
 
 
@@ -102,6 +103,7 @@ a {
   width:auto;
   height:250px;
   display:inline-block;
+  text-align:center;
 }
 
 
@@ -110,7 +112,8 @@ a {
 
   background-color:#ccFFFF;
   width:100%;
-  height:650px;
+  height:auto;
+  overflow:hidden;
   text-align:center;
 }
 
